[package]
name = "yurt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE"
description = "Rust client library for the aoe4guides.com API"
homepage = "https://github.com/gzordrai/yurt"
repository = "https://github.com/gzordrai/yurt"
readme = "README.md"
keywords = ["aoe4", "aoe4guides", "api-client", "age-of-empires", "wrapper"]
categories = ["api-bindings", "game-development", "network-programming"]

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
